--- a/css/style.css
+++ b/css/style.css
@@ -4,27 +4,33 @@ body{
 
 }
 
-.header-wapper{
-    width: 100%;
-    height: 150px;
-    border:solid salmon;
 
-}
 .header{
-    width: 50%;
-    height:20px;
+    width: 100%;
+    height:150px;
     border: solid green;
-    margin-left: 150px;
+    position: relative;
+    
+    
+}
+
+.logo{
+    position: relative;
 }
 
 .header nav{
+    width: 80%;
+    height: 40px;
+    border: solid ;
     text-align: center;
+    justify-content: space-around;
     
 }
 
 .header nav a{
     text-align: center;
     text-decoration: none;
+    
 }
 
 hr{
@@ -32,6 +38,3 @@ hr{
     margin-right: 1800px;
 }
 
-.logo{
-
-}
