--- a/css/style2.css
+++ b/css/style2.css
@@ -114,7 +114,7 @@ h1{
     /* border: solid green; */
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-    margin-top: -50px;
+    margin-top: 0px;
 }
 
 #started {
@@ -162,96 +162,80 @@ a{
     background-color: aqua;    
 }
 
-.footer{
-    width: 100%;
-    height: 450px;
-    /* border: solid brown 5px ; */
-    background-color: black;
-    margin-bottom: -25px;
-    padding:30px ;
-    top: 200px;
-}
+.grid-container{
+  display: grid;
+  border: solid green;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr ;
+  grid-template-rows:1fr;
 
-.footer-wrapper{
-    width: 80%;
-    height: 80%;
-    /* border: solid yellow 5px; */
-    /* padding: 70px; */
-    justify-content: center;
-    margin-top: -18px;
-    display: absolute; 
-    margin: 40px auto;
-    margin-top: 0px;
-    
 }
-
-.footer-wrapper a{
-    text-decoration: none;
-    color: #757575;
-    margin: 46px;
-    padding-bottom: 52px;
-    bottom: 350px;
-   
-}
- .footer-top{
-    width: 80%;
-    height: 15px;
-    /* border: solid blue 2px; */
-    /* display: block; */
-    
-    font-size: 24px;
-    padding: 1px;
-    font-family: Arial, Helvetica, sans-serif;
+ .grid-container > div {
+   border: solid brown; 
   
-    
 }
-.footer-content{
-    width: 100%;
-    height: 80%;
-    /* border: 2px solid white; */
-    /* margin: 3px auto; */
-     padding: 50px; 
-    /* left: 50px; */
-    /* column-gap: 25px; */
-}
-/* .column1{
-    width: 25%;
-    height: 50%;
-    border: solid blanchedalmond 3px;
-    color: #757575;
-} */
 
-.column1 li{
-    text-decoration: none;
-    list-style-type: none;
-    color: #757575;
-    font-size: 20px;
-    font-family:Arial, Helvetica, sans-serif;
-    column-gap: 25px;
-    cursor: pointer;
-    }
-/* .column2{
-    width: 25%;
-    height: 50%;
-    border: solid blanchedalmond 3px;
-    color: #757575;
-    
-} */
+/* About us Page */
 
-
-.footer-country{
-    font-size: 13px;
-    margin-top: 24px;
-    color: #757575;
+.content{
+  /* width: 100%; */
+  /* height: auto; */
+  border: solid black; 
+  /* display: flex; */
+  /* position: relative; */
+  
 }
 
 
-.column1{
-    display: flex;
-    /* background-color: white; */
-    /* border: solid 3px brown;  */
-    /* gap: 25px; */
-    justify-content:space-around; 
-    /* justify-items: baseline; */
-    cursor: pointer;
+.content-box{
+  width: 100%;
+  height:auto;
+  border: solid brown;
+  position: relative;
+  /* bottom: 250px; */
+}
+.content-img{
+  height: auto;
+}
 
+.grid-content{
+  width: 90%;
+  /* border: solid black; */
+  margin-left: 70px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows:1fr; 
+  background-color: #fff;
+
+}
+
+.grid-content > div {
+
+  border: solid brown;
+   
+ 
+}
+
+.grid-content > div img {
+  width: 100%;
+}
+
+h3{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
+  margin-top: 0px;
+}
+
+.grid-content p{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  padding: 10 auto;
+  color: #717171;
+  margin-top:100px;
+  margin-bottom: 100px;
+  
+}
+
+#ceo {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
