--- a/css/style2.css
+++ b/css/style2.css
@@ -55,16 +55,7 @@
   /* text-align: center; */
 }
 
-/* Number text (1/3 etc) */
-/* .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-} */
 
-/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 15px;
@@ -142,7 +133,7 @@ a{
 
 
 }
-.shop a{
+/* .shop a{
   
     margin-left: 50px;
     width: 60px;
@@ -151,7 +142,7 @@ a{
 #shop a:hover{
     cursor: pointer;
 
-}
+} */
 
 .container2{
     display: flex;
@@ -196,6 +187,18 @@ a{
 .content-img{
   height: auto;
 }
+.grid-content1{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  
+}
+
+#contact-form{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  border: solid green;
+}
 
 .grid-content{
   width: 90%;
@@ -210,8 +213,7 @@ a{
 
 .grid-content > div {
 
-  border: solid brown;
-   
+  border: solid brown;  
  
 }
 
@@ -230,12 +232,54 @@ h3{
   font-size: 20px;
   padding: 10 auto;
   color: #717171;
-  margin-top:100px;
-  margin-bottom: 100px;
+  /* margin-top:100px;
+  margin-bottom: 100px; */
   
 }
 
 #ceo {
   grid-column-start: 1;
   grid-column-end: 3;
+}
+
+span{
+  color: #be0811;
+}
+
+span:hover{
+  color: #717171;
+  cursor: pointer;
+}
+/* Style inputs */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+
+
+
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
 }
