--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,6 @@
+/* Home Page
+index.html */
+
 * {box-sizing:border-box} 
 
 /* Slideshow container */
@@ -8,12 +11,10 @@
   margin: auto; 
 }
 
-/* Hide the images by default */
 .mySlides {
   display: none;
 }
 
-/* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
@@ -29,18 +30,17 @@
   user-select: none;
 }
 
-/* Position the "next button" to the right */
+
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
+
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
 .text {
   color: #f2f2f2;
   font-size: 15px;
@@ -54,7 +54,6 @@
   margin-bottom: 50px;
   /* text-align: center; */
 }
-
 
 .dot {
   cursor: pointer;
@@ -71,7 +70,6 @@
   background-color: #717171;
 }
 
-/* Fading animation */
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
@@ -89,16 +87,45 @@
   to {opacity: 1}
 }
 
-/* .text h1{
-    margin-top: 50px;
-} */
 
 h1{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 70px;
     margin-top: 0px;
 }
+.text1{
+  color: #f2f2f2;
+  font-size: 15px;
+  /* padding: 8px 12px; */
+  position: absolute;
+  bottom: 8px;
+  width: 80%;
+  height: 420px;
+  /* border: solid black; */
+  margin-left: 100px;
+  margin-bottom: 120px;
+  /* text-align: center; */
 
+}
+#learn{
+  width: 200px;
+  height: 60px;
+  background:#be0811;
+  color: #fff;
+  padding: 20px 20px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  text-align: center;
+  align-items: center;
+  /* text-decoration: none; */
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  margin-top:200px
+  
+}
+#learn:hover{
+  cursor: pointer;
+}
 .text p{
     width: 100%;
     height: 40px;
@@ -122,6 +149,11 @@ h1{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
    /* margin: 0 auto; */
+   margin-top:50px
+}
+#started:hover{
+  cursor: pointer
+
 }
 
 a{
@@ -133,16 +165,9 @@ a{
 
 
 }
-/* .shop a{
-  
-    margin-left: 50px;
-    width: 60px;
-}
 
-#shop a:hover{
-    cursor: pointer;
-
-} */
+/* About Us Page
+about.html */
 
 .container2{
     display: flex;
@@ -155,16 +180,60 @@ a{
 
 .grid-container{
   display: grid;
-  border: solid green;
+  /* border: solid green; */
   grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr ;
   grid-template-rows:1fr;
 
 }
- .grid-container > div {
+
+.grid-container1{
+  display: grid;
+  /* border: solid green; */
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows:1fr;
+
+}
+.grid-container1 > div {
    border: solid brown; 
+  
+
+}
+.grid-container p{
+  color: #717171;
+  font-size: 25px;
+  text-align: center
+}
+/* #learn{
+  width: 200px;
+  height: 60px;
+  background:#be0811;
+  color: #fff;   
+  padding: 20px 20px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  text-align: center;
+  align-items: center;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  margin: 0 auto; 
+
+} */
+#bank{
+text-align: left;
+
+}
+.grid-container p:hover{
+  color: #be0811;
   
 }
 
+.grid-container img{
+  align-items: center;
+  justify-content: space-between;
+  margin-top:20px;
+  margin-left: 70px;
+}
 /* About us Page */
 
 .content{
@@ -189,9 +258,15 @@ a{
 }
 .grid-content1{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr;
+  text-align: center;
   
+}
+
+.grid-content1 p{
+  color:#717171;
+  font-size: 20px;
 }
 
 #contact-form{
@@ -236,21 +311,162 @@ h3{
   margin-bottom: 100px; */
   
 }
+.grid-content1{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  padding: 10 auto;
+  color: #717171;
+  /* margin-top:100px;
+  margin-bottom: 100px; */
+  
+}
+h3{
+  color: black;
+}
+.grid-content1 span{
+  color: #be0811;
+}
 
 #ceo {
   grid-column-start: 1;
   grid-column-end: 3;
 }
 
-span{
+.grid-content span{
   color: #be0811;
 }
-
-span:hover{
-  color: #717171;
-  cursor: pointer;
+.form{
+  width: 60%;
+  border: solid yellow;
 }
-/* Style inputs */
+
+
+/* E-Banking Page
+e-banking.html */
+
+@import url(https://fonts.googleapis.com/css?family=Exo:100,200,400);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
+
+/* body{
+	margin: 0;
+	padding: 0;
+	background: #fff;
+
+	color: #fff;
+	font-family: Arial;
+	font-size: 12px;
+}
+
+.grad{
+	
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
+	/* z-index: 1;
+	opacity: 0.7;
+  border: solid green;
+} */
+
+.header{
+	/* position: absolute; */
+	top: calc(50% - 35px);
+	left: calc(50% - 255px);
+	z-index: 2;
+}
+/* 
+.header div{
+	float: left;
+	color: #fff;
+	font-family: 'Exo', sans-serif;
+	font-size: 35px;
+	font-weight: 200;
+} */
+
+.header div span{
+	color: #5379fa !important;
+}
+
+/* .login{
+	/* position: absolute; */
+	/* top: calc(50% - 75px);
+	left: calc(50% - 50px);
+	height: 150px;
+	width: 350px;
+	padding: 10px;
+	z-index: 2;
+} */  */
+/* 
+.login input[type=text]{
+	width: 250px;
+	height: 30px;
+	background: transparent;
+	border: 1px solid rgba(255,255,255,0.6);
+	border-radius: 2px;
+	color: #fff;
+	font-family: 'Exo', sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	padding: 4px;
+}
+
+.login input[type=password]{
+	width: 250px;
+	height: 30px;
+	background: transparent;
+	border: 1px solid rgba(255,255,255,0.6);
+	border-radius: 2px;
+	color: #fff;
+	font-family: 'Exo', sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	padding: 4px;
+	margin-top: 10px;
+}
+
+.login input[type=button]{
+	width: 260px;
+	height: 35px;
+	background: #fff;
+	border: 1px solid #fff;
+	cursor: pointer;
+	border-radius: 2px;
+	color: #a18d6c;
+	font-family: 'Exo', sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	padding: 6px;
+	margin-top: 10px;
+} */
+
+.login input[type=button]:hover{
+	opacity: 0.8;
+}
+
+.login input[type=button]:active{
+	opacity: 0.6;
+}
+
+.login input[type=text]:focus{
+	outline: none;
+	border: 1px solid rgba(255,255,255,0.9);
+}
+
+.login input[type=password]:focus{
+	outline: none;
+	border: 1px solid rgba(255,255,255,0.9);
+}
+
+.login input[type=button]:focus{
+	outline: none;
+}
+
+::-webkit-input-placeholder{
+   color: rgba(255,255,255,0.6);
+}
+
+::-moz-input-placeholder{
+   color: rgba(255,255,255,0.6);
+}
+
+/* Style inputs
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
@@ -270,16 +486,81 @@ input[type=submit] {
 
 input[type=submit]:hover {
   background-color: #45a049;
+} */
+
+/* .grid-content span:hover{
+  color: #717171;
+  cursor: pointer;
+} */
+/* Style inputs */
+/* input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical; */
+/* } */
+
+/* input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
 }
 
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+ */
 
 
-
+ 
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 300px) {
   .column, input[type=submit] {
     width: 100%;
     margin-top: 0;
   }
+} */
+/* 
+.hover-container{
+  position: relative; 
+  width: 100%;
+  max-width: 400px;
 }
+.hover-container img{
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .3s ease;
+  background-color: red;
+}
+
+.hover-container:hover .overlay {
+  opacity: 1;
+}
+
+.overlay img {
+  color: white;
+  font-size: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+} */
