--- a/css/style2.css
+++ b/css/style2.css
@@ -103,7 +103,7 @@ h1{
   height: 420px;
   /* border: solid black; */
   margin-left: 100px;
-  margin-bottom: 120px;
+  margin-bottom: 20px;
   /* text-align: center; */
 
 }
@@ -114,7 +114,7 @@ h1{
   color: #fff;
   padding: 20px 20px;
   border-radius: 5px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   text-align: center;
   align-items: center;
   /* text-decoration: none; */
@@ -236,20 +236,17 @@ text-align: left;
 }
 /* About us Page */
 
-.content{
-  /* width: 100%; */
-  /* height: auto; */
-  border: solid black; 
-  /* display: flex; */
-  /* position: relative; */
-  
-}
 
+
+
+/* Contact page 
+contact.html */
 
 .content-box{
+  padding: 10px;
   width: 100%;
   height:auto;
-  border: solid brown;
+  /* border: solid brown; */
   position: relative;
   /* bottom: 250px; */
 }
@@ -258,7 +255,7 @@ text-align: left;
 }
 .grid-content1{
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   text-align: center;
   
@@ -272,7 +269,32 @@ text-align: left;
 #contact-form{
   grid-column-start: 2;
   grid-column-end: 3;
-  border: solid green;
+  /* border: solid green; */
+}
+
+.contact_form{
+  /* border: solid green; */
+  text-align: left;
+  
+}
+
+.contact_text, label{
+  font-size:30px;
+  display: block;
+  margin: .4rem 0;
+  /* border: solid blue; */
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  
+}
+
+.contact_text > div input{
+  height: 40px;
+  width: 800px
+  
+  
+
+  
 }
 
 .grid-content{
@@ -307,8 +329,7 @@ h3{
   font-size: 20px;
   padding: 10 auto;
   color: #717171;
-  /* margin-top:100px;
-  margin-bottom: 100px; */
+
   
 }
 .grid-content1{
@@ -316,9 +337,15 @@ h3{
   font-size: 20px;
   padding: 10 auto;
   color: #717171;
-  /* margin-top:100px;
-  margin-bottom: 100px; */
-  
+}
+#send{
+  color: #ffff;
+  background-color:#be0811;
+  font-size: 20px;
+  border-radius: 10px;
+  width: 180px;
+  height: 40px;
+  cursor: pointer;
 }
 h3{
   color: black;
@@ -335,10 +362,7 @@ h3{
 .grid-content span{
   color: #be0811;
 }
-.form{
-  width: 60%;
-  border: solid yellow;
-}
+
 
 
 /* E-Banking Page
