--- a/css/style1.css
+++ b/css/style1.css
@@ -24,7 +24,7 @@
 .footer-wrapper a{
     text-decoration: none;
     color: #757575;
-    margin: 46px;
+    /* margin: 46px; */
     padding-bottom: 52px;
     bottom: 350px;
    
